@@ -84,6 +84,7 @@ Global Neighbor Sums
 Global Whispers (Dutch, et. al.)
 Gurth's Symmetric Placement (GSP)
 Hanging Sums/Counts/Averages
+Hidden Clones
 Indexing
 Irregular Sudoku
 Isotopes
@@ -1004,6 +1005,12 @@ setHangingSum(row,col,rc,value,selectSummands,selectTerminator,terminateOnFirst=
   
   The sum can again terminate in the first cell, or it continues to the first parity change.
 	
+Hidden Clones
+-------------
+setHiddenClones(list,number): assert that the region of cells defined via list has at least number exact clones (same digits in same position, no rotation or reflection)
+  list: list of cell specifications
+  number: minimum number of clones to assert
+
 Indexing (159)
 --------------
 ****NOTE****
